--- a/src/app/single-book/single-book.component.html
+++ b/src/app/single-book/single-book.component.html
@@ -48,6 +48,10 @@
                     <input type="text" class="form-control" id="genre" [(ngModel)]="book.genre">
                 </div>
                 <div class="form-group">
+                    <label for="genre">Cover Image</label>
+                    <input type="text" class="form-control" id="genre" [(ngModel)]="book.cover">
+                </div>
+                <div class="form-group">
                     <label for="description">Description</label>
                     <textarea class="form-control" id="description" [(ngModel)]="book.description"></textarea>
                 </div>
